fix: Inter-section spacing issue

--- a/niall-paterson/partials/_layout.scss
+++ b/niall-paterson/partials/_layout.scss
@@ -65,8 +65,8 @@ section {
 
 section,
 ul {
-  // minus header height
-  height: 100vh - $medium-height;
+
+  height: 100vh;
 }
 
 article {
